--- a/webapp/index.html
+++ b/webapp/index.html
@@ -1,123 +1,1 @@
-
-<!doctype html>
-<html lang="ru">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sex Health — Mini App</title>
-  <meta name="theme-color" content="#0b0c0e">
-  <link rel="icon" href="/assets/logo.svg">
-  <script src="https://telegram.org/js/telegram-web-app.js"></script>
-  <!-- Chart.js and jsPDF for charts and PDF export -->
-  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
-  <link rel="stylesheet" href="/styles.css" />
-</head>
-<body>
-  <div class="shell">
-    <header class="header glass">
-      <div class="brand">
-        <img class="logo" src="/assets/logo.svg" alt="logo">
-        <div>
-          <h1>Sex Health</h1>
-          <div class="subtitle">Приватный мониторинг и советы</div>
-        </div>
-      </div>
-      <div class="header-actions">
-        <button id="lockBtn" class="btn ghost">🔒</button>
-        <button id="exportCsv" class="btn">CSV</button>
-        <button id="exportPdf" class="btn primary">PDF</button>
-      </div>
-    </header>
-
-    <main class="grid">
-      <section class="card span-2">
-        <h2>➕ Новая запись</h2>
-        <form id="eventForm" class="form">
-          <div class="row">
-            <label>Когда
-              <input type="datetime-local" id="dt" required>
-            </label>
-            <label>Категория
-              <select id="category">
-                <option value="sex">Секс</option>
-                <option value="masturbation">Мастурбация</option>
-                <option value="date">Свидание</option>
-                <option value="foreplay">Прелюдия</option>
-                <option value="other">Другое</option>
-              </select>
-            </label>
-          </div>
-          <div class="row">
-            <label>Партнёр/ша
-              <input type="text" id="partner" placeholder="имя/метка (опц.)">
-            </label>
-            <label>Настроение
-              <select id="mood">
-                <option value="👌 нормально">👌 нормально</option>
-                <option value="🔥 супер">🔥 супер</option>
-                <option value="😴 устал(а)">😴 устал(а)</option>
-                <option value="😕 стресс">😕 стресс</option>
-              </select>
-            </label>
-          </div>
-          <div class="row">
-            <label class="checkbox"><input type="checkbox" id="protected"> Использовалась защита</label>
-            <label class="checkbox"><input type="checkbox" id="orgasm"> Оргазм</label>
-          </div>
-          <label>Заметка
-            <textarea id="note" rows="2" placeholder="самочувствие, контекст..."></textarea>
-          </label>
-          <div class="row actions">
-            <button type="submit" class="btn primary">Сохранить</button>
-            <button type="button" id="clearBtn" class="btn danger">Очистить всё</button>
-          </div>
-        </form>
-      </section>
-
-      <section class="card">
-        <div class="row space">
-          <h2>📊 Статистика</h2>
-          <select id="filterCat" class="chip">
-            <option value="all">Все категории</option>
-            <option value="sex">Секс</option>
-            <option value="masturbation">Мастурбация</option>
-            <option value="date">Свидание</option>
-            <option value="foreplay">Прелюдия</option>
-            <option value="other">Другое</option>
-          </select>
-        </div>
-        <div class="kpis" id="kpis"></div>
-        <canvas id="chart" height="140"></canvas>
-      </section>
-
-      <section class="card">
-        <h2>💡 Советы</h2>
-        <ul id="tips" class="tips"></ul>
-      </section>
-
-      <section class="card span-2">
-        <h2>🗂 История</h2>
-        <div id="history" class="history"></div>
-      </section>
-    </main>
-
-    <footer class="footer muted">⚕️ Не заменяет консультацию врача</footer>
-  </div>
-
-  <!-- PIN modal -->
-  <dialog id="pinModal" class="modal">
-    <form method="dialog" class="modal-body card">
-      <h3>🔒 Введите PIN</h3>
-      <input id="pinInput" type="password" inputmode="numeric" maxlength="6" placeholder="например, 2580" class="pin">
-      <div class="row actions">
-        <button id="pinSet" class="btn">Установить</button>
-        <button id="pinCheck" class="btn primary">Войти</button>
-      </div>
-      <div class="muted small">Если PIN ещё не установлен — нажми «Установить».</div>
-    </form>
-  </dialog>
-
-  <script type="module" src="/app.js"></script>
-</body>
-</html>
+<!doctype html><html><head><meta charset='utf-8'><title>Sex Health v3</title></head><body><h1>Sex Health v3 App</h1></body></html>
